--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-rate-limit": "^6.3.0",
     "express-validator": "^6.14.0",
+    "helmet": "^5.0.2",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.15",
     "pg": "^8.7.3",
